feat(org): enable setting additional redirect uris for the oauth2clients
