# docs/reference/api/openapi.yaml
@@ -381,6 +381,11 @@ components:
                         - key
                         - name
                       type: object
+                    clientRedirectURIs:
+                      description: OAuth2ClientRedirectURIs are a registered set of redirect URIs. When redirecting from the idproxy to\nthe client application, the URI requested to redirect to must be contained in this list.
+                      items:
+                        type: string
+                      type: array
                     clientSecretReference:
                       description: ClientSecretReference references the Kubernetes secret containing the client secret.
                       properties:
@@ -398,7 +403,7 @@ components:
                       description: Issuer is the URL of the identity service.
                       type: string
                     redirectURI:
-                      description: RedirectURI is the redirect URI.\nIf none is specified, the Greenhouse ID proxy will be used.
+                      description: RedirectURI is the redirect URI to be used for the OIDC flow against the upstream IdP.\nIf none is specified, the Greenhouse ID proxy will be used.
                       type: string
                   required:
                     - clientIDReference
